oracle/HedgeDoc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hedgedoc

spec:
  rules:
    - host: hedgedoc.haijin666.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  app
                port:
                  number: 3000
